# perry

./: .gitignore  Cargo.toml  Makefile  README.md  justfile  test.c
.github/workflows/: notify-pearterm.yml
src/: lexer.rs  lib.rs  main.rs  parser.rs
src/interpreter/: interpreter.rs  mod.rs  repl.rs  tests.rs
src/interpreter/native/: repl.rs
src/lexer/: lexer.rs  mod.rs  tests.rs
src/parser/: ast_printer.rs  mod.rs  parser.rs  tests.rs
