[package]
name = "perry"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
anyhow = "1.0.93"
#inkwell = { version = "0.5.0", features = ["llvm18-0"] }
itertools = "0.13.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2.169"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
